Fixed webiste tour misplaced location on mobile devices

--- a/src/components/nav_bar_styles.css
+++ b/src/components/nav_bar_styles.css
@@ -6,7 +6,7 @@
 }
 
 nav{   
-    position: sticky;
+    position: absolute;
     top:0;
     left:0;
     height: 60px;
@@ -26,9 +26,10 @@ nav{
     transition: background-color 0.3s, opacity 0.3s;
 }
 .nav-transparent{   
-    position: sticky;
+    position: fixed;
     top:0;
     left:0;
+    width: 100%;
     height: 60px;
 
     background-color: rgb(255,255,255,0.5);
